# flip-free-parametrization

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  run_all.sh
applications/: CMakeLists.txt
applications/comparison_with_previous/: CMakeLists.txt  main.cpp
applications/comparison_with_previous/meshes/: .gitignore  README.txt
applications/dataset/: CMakeLists.txt  main.cpp
applications/dataset/meshes/: README.txt  preprocess.m
applications/deformation/: CMakeLists.txt  main.cpp
applications/deformation/meshes/: README.txt  armadillo.mesh  mesh_from_png.m  octopus-vol.mesh  slug.mesh  stuffedtoy.mesh
applications/interactive_deformation/: CMakeLists.txt  InteractiveDeformer.h  main.cpp
applications/interactive_deformation/matcaps/: README.txt
applications/interactive_deformation/meshes/: README.txt  cow.mesh  fish.mesh  hand.mesh  mesh_from_png.m
applications/limitations/: CMakeLists.txt  main.cpp
applications/limitations/meshes/: README.txt  monkey.mesh
applications/unflipping_triangles/: CMakeLists.txt  main.cpp
applications/unflipping_triangles/meshes/: README.txt
applications/uv_map/: CMakeLists.txt  main.cpp  parametrize_all_meshes.sh
applications/uv_maps/: CMakeLists.txt  main.cpp
applications/uv_maps/meshes/: README.txt
applications/volumetric_map/: CMakeLists.txt  main.cpp
applications/volumetric_map/meshes/: README.txt  human.mesh
include/parametrization/: CallbackFunction.h  OptimizationOptions.h  argmin_P.cpp  argmin_P.h  argmin_U.cpp  argmin_U.h  argmin_W.cpp  argmin_W.h  bff.cpp  bff.h  constrained_qp.cpp  constrained_qp.h  energy.cpp  energy.h  grad_f.h  h_bound.h  lagrangian.cpp  lagrangian.h  lagrangian_error.cpp  lagrangian_error.h  map_energy.cpp  map_energy.h  map_to.cpp  map_to.h  mat_from_index.h  mu_bound.h  parametrization_assert.h  polar_decomposition.cpp  polar_decomposition.h  project_onto_spd.h  quartic_polynomial.cpp  quartic_polynomial.h  rescale_b_mumin.cpp  rescale_b_mumin.h  rescale_h.cpp  rescale_h.h  rescale_penalties.cpp  rescale_penalties.h  rotmat_from_complex_quat.h  rotmat_sym_product.cpp  (+15 more)
tests/: CMakeLists.txt  README.md  main.cpp
tests/src/: argmin_P.cpp  argmin_U.cpp  argmin_W.cpp  bff.cpp  compare_matrices.h  constrained_qp.cpp  energy.cpp  lagrangian.cpp  polar_decomposition.cpp  quartic_polynomial.cpp  rotmat_sym_product.cpp  spd_quartic_polynomial.cpp  sqrtm.cpp  test_meshes.h  tutte.cpp
